--- a/ClubCloud.Administratie/Modules/ClubCloudDesign/ClubCloud/type/fontello.css
+++ b/ClubCloud.Administratie/Modules/ClubCloudDesign/ClubCloud/type/fontello.css
@@ -1,9 +1,9 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 
 @font-face {
   font-family: 'fontello';
   src: url("fontello/fontello.eot");
-  src: url("fontello/fontello.eot@#iefix") format('embedded-opentype'), url("fontello/fontello.woff") format('woff'), url("fontello/fontello.ttf") format('truetype'), url("fontello/fontello.svg#fontello") format('svg');
+  src: url("fontello/fontello.eot?#iefix") format('embedded-opentype'), url("fontello/fontello.woff") format('woff'), url("fontello/fontello.ttf") format('truetype'), url("fontello/fontello.svg#fontello") format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -11,7 +11,7 @@
 @font-face {
   font-family: 'fontello-social';
   src: url("fontello/fontello-social.eot");
-  src: url("fontello/fontello-social.eot@#iefix") format('embedded-opentype'), url("fontello/fontello-social.woff") format('woff'), url("fontello/fontello-social.ttf") format('truetype'), url("fontello/fontello-social.svg#fontello") format('svg');
+  src: url("fontello/fontello-social.eot?#") format('embedded-opentype'), url("fontello/fontello-social.woff") format('woff'), url("fontello/fontello-social.ttf") format('truetype'), url("fontello/fontello-social.svg#fontello") format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -19,7 +19,7 @@
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
   font-family: 'fontello';
-  font-style: normal;
+  font-style: normal;iefix
   font-weight: normal;
   speak: none;
   display: inline-block;
