--- a/ClubCloud.Administratie/Modules/ClubCloudDesign/ClubCloud.master
+++ b/ClubCloud.Administratie/Modules/ClubCloudDesign/ClubCloud.master
@@ -45,9 +45,9 @@
 <![endif]--><!--[if IE 9]>
 <link rel="stylesheet" type="text/css" href="#" media="all" />
 <![endif]--><!--[if lt IE 9]>
-<script src="../Style%20Library/js/html5.js" type="text/javascript"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js" type="text/javascript"></script>
 <![endif]--><!--[if IE 7]>
-<link rel="stylesheet" href="ClubCloud/css-ie7-fix.css" type="text/css" media="all" />
+<link rel="stylesheet" href="/_catalogs/masterpage/ClubCloud/css-ie7-fix.css" type="text/css" media="all" />
 <![endif]-->
 <link rel="stylesheet" href="/_catalogs/masterpage/ClubCloud/style.css" type="text/css" media="all" />
 <link rel="stylesheet" href="/_catalogs/masterpage/ClubCloud/css/media-queries.css" type="text/css" media="all" />
@@ -115,7 +115,7 @@
 						<!-- Begin Menu -->
 						<nav id="menu" class="ms-dialogHidden menu">
 							<ul id="tiny">
-								<li  class="menu-item"><a href="default.aspx"><i class="icon-home fa-fw special"></i> Start</a></li>
+								<li  class="menu-item"><a href="/"><i class="icon-home fa-fw special"></i> Start</a></li>
 								<li  class="menu-item"><a href="gebruikers.aspx"><i class="fa fa-credit-card fa-fw special"></i> gebruikers</a>
 								<ul class="sub-menu">
 									<li  class="menu-item"><a href="functionarissen.aspx"><i class="icon-docs fa-fw special"></i> Functionarissen</a></li>
@@ -253,9 +253,6 @@
 <script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/fancybox/helpers/jquery.fancybox-thumbs0ff5.js"></script>
 <script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/fancybox/helpers/jquery.fancybox-mediae209.js"></script>
 <script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/scripts.js"></script>
-<!-- <script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/jquery.ui.core.min.js"></script>
-<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/jquery.ui.widget.min.js"></script>
-<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/jquery.ui.accordion.min.js"></script> -->
 <script type="text/javascript" >
     $(document).ready(function () {
 
