--- a/ClubCloud.Administratie/Modules/ClubCloudDesign/ClubCloud.master
+++ b/ClubCloud.Administratie/Modules/ClubCloudDesign/ClubCloud.master
@@ -29,23 +29,20 @@
 	<SharePoint:ProjectProperty Property="Title" runat="server" /></asp:ContentPlaceHolder>
 </SharePoint:PageTitle>
 <SharePoint:SPShortcutIcon runat="server" IconUrl="/_layouts/15/images/favicon.ico?rev=23" />
-<script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/4.5.2/1/MicrosoftAjax.js"></script>
-<script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/4.5.2/1/MicrosoftAjaxWebForms.js"></script>
-<script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/4.5.2/1/MicrosoftAjaxApplicationServices.js"></script>
-<script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/4.5.2/1/MicrosoftAjaxTimer.js"></script>
-<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/jquery.min.js"></script>
-<SharePoint:StartScript runat="server" />
-<SharePoint:CssLink runat="server" Version="15"/>
+<script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/4.5.2/1/MicrosoftAjax.js" defer="defer" async=""></script>
+<script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/4.5.2/1/MicrosoftAjaxWebForms.js" defer="defer" async=""></script>
+<script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/4.5.2/1/MicrosoftAjaxApplicationServices.js" defer="defer" async=""></script>
+<script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/4.5.2/1/MicrosoftAjaxTimer.js" defer="defer" async=""></script>
+<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/jquery.min.js" defer="defer" async=""></script>
+<SharePoint:CssLink runat="server" Version="15" />
 <SharePoint:CacheManifestLink runat="server" />
-
-
 <!-- ===== STARTER: Additional header placeholder - overridden by asp:content on pages or page layouts  =========================== -->
 <!--[if IE 8]>
 <link rel="stylesheet" type="text/css" href="#" media="all" />
 <![endif]--><!--[if IE 9]>
 <link rel="stylesheet" type="text/css" href="#" media="all" />
 <![endif]--><!--[if lt IE 9]>
-<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js" type="text/javascript"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js" type="text/javascript" defer="defer" async=""></script>
 <![endif]--><!--[if IE 7]>
 <link rel="stylesheet" href="/_catalogs/masterpage/ClubCloud/css-ie7-fix.css" type="text/css" media="all" />
 <![endif]-->
@@ -84,11 +81,13 @@
 	EnableScriptLocalization="true" 
 	ValidateRequestMode="Enabled" 
 	AllowCustomErrorsRedirect="true"
+	LoadScriptsBeforeUI="false"  
 	AuthenticationService-Path="~/_zimbra/default.aspx"  
 	CompositeScript-ScriptMode="Auto" 
 	ScriptMode="Auto" >
 <AuthenticationService Path="~/_zimbra/default.aspx" />
 </asp:ScriptManager>
+
 
 		<!-- ===== STARTER: SharePoint Reqs this for adding columns ===================================================== -->
 		<script type="text/javascript"> var submitHook = function () { return false; }; theForm._spOldSubmit = theForm.submit; theForm.submit = function () { if (!submitHook()) { this._spOldSubmit(); } }; </script>
@@ -241,18 +240,18 @@
 </div>
 <!-- End Body Wrapper -->
 
-<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/ddsmoothmenu.js"></script>
-<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/jquery.isotope.min.js"></script>
-<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/selectnav.min.js"></script>
-<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/jquery.slickforms.js"></script>
-<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/jquery.easytabs.min.js"></script>
-<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/jquery.themepunch.plugins.min.js"></script>
-<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/jquery.themepunch.revolution.min.js"></script>
-<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/jquery.fancybox.pack.js"></script>
-<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/fancybox/helpers/jquery.fancybox-buttons0ff5.js"></script>
-<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/fancybox/helpers/jquery.fancybox-thumbs0ff5.js"></script>
-<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/fancybox/helpers/jquery.fancybox-mediae209.js"></script>
-<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/scripts.js"></script>
+<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/ddsmoothmenu.js" defer="defer" async=""></script>
+<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/jquery.isotope.min.js" defer="defer" async=""></script>
+<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/selectnav.min.js" defer="defer" async=""></script>
+<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/jquery.slickforms.js" defer="defer" async=""></script>
+<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/jquery.easytabs.min.js" defer="defer" async=""></script>
+<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/jquery.themepunch.plugins.min.js" defer="defer" async=""></script>
+<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/jquery.themepunch.revolution.min.js" defer="defer" async=""></script>
+<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/jquery.fancybox.pack.js" defer="defer" async=""></script>
+<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/fancybox/helpers/jquery.fancybox-buttons0ff5.js" defer="defer" async=""></script>
+<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/fancybox/helpers/jquery.fancybox-thumbs0ff5.js" defer="defer" async=""></script>
+<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/fancybox/helpers/jquery.fancybox-mediae209.js" defer="defer" async=""></script>
+<script type="text/javascript" src="/_catalogs/masterpage/ClubCloud/js/scripts.js" defer="defer" async=""></script>
 <script type="text/javascript" >
     $(document).ready(function () {
 
@@ -287,17 +286,15 @@
 
 <!-- ===== STARTER: SP Scripts and CSS  =========================================================================================== -->
 
-<SharePoint:ScriptLink language="javascript" name="core.js" runat="server" Localizable="false"/>
-<SharePoint:ScriptLink language="javascript" name="menu.js" runat="server" Localizable="false"/>
-<SharePoint:ScriptLink language="javascript" name="sp.js" runat="server" Localizable="false"/>
-<SharePoint:ScriptLink language="javascript" name="SP.UI.Dialog.js" runat="server" Localizable="false"/> 
-<SharePoint:CustomJSUrl runat="server"/>
+<SharePoint:ScriptLink language="javascript" name="core.js" runat="server" Localizable="false" Defer="true" LoadAfterUI="true"/>
+<SharePoint:ScriptLink language="javascript" name="menu.js" runat="server" Localizable="false" Defer="true" LoadAfterUI="true"/>
+<SharePoint:ScriptLink language="javascript" name="sp.js" runat="server" Localizable="false" Defer="true" LoadAfterUI="true"/>
+<SharePoint:ScriptLink language="javascript" name="SP.UI.Dialog.js" runat="server" Localizable="false" Defer="true" LoadAfterUI="true"/> 
+<SharePoint:CustomJSUrl runat="server" />
 <SharePoint:SoapDiscoveryLink runat="server"/>
-<SharePoint:CssRegistration Name="Themable/corev15.css" runat="server"/>
-
-</div>		
-		
-
+<SharePoint:CssRegistration Name="Themable/corev15.css" runat="server" />
+<SharePoint:StartScript runat="server"   />
+</div>
 </SharePoint:SharePointForm>
 
 <!-- ===== STARTER: Hidden Placeholders =========================================================================================== -->	
