--- a/ClubCloud.Administratie/Modules/ClubCloudDesign/ClubCloud/css/clubcloud.css
+++ b/ClubCloud.Administratie/Modules/ClubCloudDesign/ClubCloud/css/clubcloud.css
@@ -174,3 +174,100 @@ ul.latest li .text h4 a:hover { color: #0072C6; }
 .overlay a .more {
     background: rgba(191, 216, 65, 0.92);
 }
+
+/* ======================================= Aanmelden Wizard ======================================= */
+
+#wizHeader li .prevStep
+{
+    background-color: #0072C6;
+}
+#wizHeader li .prevStep:after
+{
+    border-left-color:#0072C6 !important;
+}
+#wizHeader li .currentStep
+{
+    background-color: #0072C6;
+}
+#wizHeader li .currentStep:after
+{
+    border-left-color: #0072C6 !important;
+}
+#wizHeader li .nextStep
+{
+    background-color:#C2C2C2;
+}
+#wizHeader li .nextStep:after
+{
+    border-left-color:#C2C2C2 !important;
+}
+#wizHeader
+{
+    list-style: none;
+    overflow: hidden;
+    font: 18px Helvetica, Arial, Sans-Serif;
+    margin: 0px;
+    padding: 0px;
+}
+#wizHeader li
+{
+    float: left;
+}
+#wizHeader li a
+{
+    color: white;
+    text-decoration: none;
+    padding: 10px 0 10px 55px;
+    background:blue; /* fallback color */
+    background: #0072C6;
+    position: relative;
+    display: block;
+    float: left;
+}
+#wizHeader li a:after
+{
+    content: " ";
+    display: block;
+    width: 0;
+    height: 0;
+    border-top: 50px solid transparent; /* Go big on the size, and let overflow hide */
+    border-bottom: 50px solid transparent;
+    border-left: 30px solid #0072C6;
+    position: absolute;
+    top: 50%;
+    margin-top: -50px;
+    left: 100%;
+    z-index: 2;
+}
+#wizHeader li a:before
+{
+    content: " ";
+    display: block;
+    width: 0;
+    height: 0;
+    border-top: 50px solid transparent;
+    border-bottom: 50px solid transparent;
+    border-left: 30px solid white;
+    position: absolute;
+    top: 50%;
+    margin-top: -50px;
+    margin-left: 1px;
+    left: 100%;
+    z-index: 1;
+}        
+#wizHeader li:first-child a
+{
+    padding-left: 10px;
+}
+#wizHeader li:last-child 
+{
+    padding-right: 50px;
+}
+#wizHeader li a:hover
+{
+    background: #0072C6;
+}
+#wizHeader li a:hover:after
+{
+    border-left-color: #0072C6 !important;
+} 
